--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="container">
     <!-- Navbar -->
     <nav>
         <a href="" class="logo">Hallo</a>
