Change image, make blob, change background, make footer, make text profile

--- a/index.html
+++ b/index.html
@@ -15,20 +15,28 @@
         <ul>
             <li><a href="">Home</a></li>
             <li><a href="">About</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="">Skills</a></li>
+            <li><a href="">Blog</a></li>
         </ul>
     </nav>
     <!-- Home -->
     <section class="home">
         <div class="home-text">
             <h1>Hay i'm <span>Riski Dwi</span></h1>
+            <article>
+                I'm a Web Development Specialish Front End.
+                <br> 
+                I have more than 1 month of experience working as a web development
+                <br>
+                at startups, e-commerce and goverment.
+            </article>
             <a>Hire Me</a>
         </div>
 
-        <div class="home-img">
-            <img src="/me.png" width="400" alt="foto saya">
+        <div class="home-img, blob">
+            <img src="/aku final.png" width="500" alt="foto saya">
         </div>  
     </section>
-    <footer id="copyright-text">Copyright 2022 by.RiskiDwi</footer>
+    <footer id="copyright-text">Copyright 2022 by. RiskiDwi</footer>
 </body>
 </html>
