check for details

--- a/index.html
+++ b/index.html
@@ -32,10 +32,17 @@
             </article>
             <a>Hire Me</a>
         </div>
-
+        <div>
+            <ul>
+                <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href=""><i class="fa-brands fa-youtube"></i></a></li>
+                <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+            </ul>
+        </div>  
         <div class="home-img, blob">
             <img src="/aku final.png" width="500" alt="foto saya">
-        </div>  
+        </div>
+        
     </section>
     <footer id="copyright-text">Copyright 2022 by. RiskiDwi</footer>
 </body>
