--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Homepage</title>
 
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -14,7 +14,7 @@
         <a href="" class="logo">Hallo</a>
         <ul>
             <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
+            <li><a href="/about.html">About</a></li>
             <li><a href="">Skills</a></li>
             <li><a href="">Blog</a></li>
         </ul>
@@ -32,13 +32,6 @@
             </article>
             <a>Hire Me</a>
         </div>
-        <div>
-            <ul>
-                <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
-                <li><a href=""><i class="fa-brands fa-youtube"></i></a></li>
-                <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
-            </ul>
-        </div>  
         <div class="home-img, blob">
             <img src="/aku final.png" width="500" alt="foto saya">
         </div>
