--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="">Home</a></li>
             <li><a href="/about.html">About</a></li>
-            <li><a href="">Skills</a></li>
+            <li><a href="/skills.html">Skills</a></li>
             <li><a href="">Blog</a></li>
         </ul>
     </nav>
@@ -33,7 +33,7 @@
             <a>Hire Me</a>
         </div>
         <div class="home-img, blob">
-            <img src="/aku final.png" width="500" alt="foto saya">
+            <img src="/images/aku final.png" width="500" alt="foto saya">
         </div>
         
     </section>
