--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <nav>
         <a href="" class="logo">Hallo</a>
         <ul>
-            <li><a href="">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="/about.html">About</a></li>
             <li><a href="/skills.html">Skills</a></li>
-            <li><a href="">Blog</a></li>
+            <li><a href="https://www.kompasiana.com/riskidwi4840">Blog</a></li>
         </ul>
     </nav>
     <!-- Home -->
