--- a/skills.html
+++ b/skills.html
@@ -14,8 +14,8 @@
         <ul>
             <li><a href="/index.html">Home</a></li>
             <li><a href="/about.html">About</a></li>
-            <li><a href="">Skills</a></li>
-            <li><a href="">Blog</a></li>
+            <li><a href="/skills.html">Skills</a></li>
+            <li><a href="https://www.kompasiana.com/riskidwi4840">Blog</a></li>
         </ul>
     </nav>
 
