add link my blog in page about

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
             <li><a href="/index.html">Home</a></li>
             <li><a href="/about.html">About</a></li>
             <li><a href="/skills.html">Skills</a></li>
-            <li><a href="/blog.html">Blog</a></li>
+            <li><a href="https://www.kompasiana.com/riskidwi4840S">Blog</a></li>
         </ul>
     </nav>
     <!-- Home -->
