--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="/index.html">Home</a></li>
             <li><a href="/about.html">About</a></li>
             <li><a href="/skills.html">Skills</a></li>
-            <li><a href="https://www.kompasiana.com/riskidwi4840">Blog</a></li>
+            <li><a href="/blog.html">Blog</a></li>
         </ul>
     </nav>
     <!-- Home -->
